<resources>
    <!-- App Name-->
    <string name="app_name">Wishlist - App</string>

    <!-- Bilder Beschreibungen -->
    <string name="welcome">Welcome</string>

    <!-- Welcome Text (das mach ich nur um die ausrufezeichen weg zu bekommen) -->
    <string name="text_welcome">To the ChristChild</string>

    <!-- Button Texte -->
    <string name="start_btn">Start</string>
    <string name="toLifeWishes">Lebenswünsche</string>
    <string name="toTechnic">Technik</string>
    <string name="toWishesForTheWorld">Für die Welt</string>
    <string name="sendToHaven">Zum Christkind schicken</string>
    <string name="refresh">Ich fang neu an</string>

    <!-- Seiten Namen -->
    <string name="wishlist">Meine Wunschliste</string>
    <string name="technic">Technik</string>
    <string name="forLife">Lebenswünsche</string>
    <string name="toHuman">Für die Welt</string>

    <!-- Wunschbeschreibungen -->
    <string name="descript_PC">Weißt du nicht was ein PC ist? Mit Internetz und Ballerspiele usw....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>