<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.WelcomeFragment" >

    <ImageView
        android:id="@+id/backgroundIV"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/startTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTV"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#423838"
        android:text="@string/text_welcome"
        android:textColor="#9E1F1F"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/backgroundIV"
        app:layout_constraintStart_toStartOf="@+id/backgroundIV"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/startTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_btn"
        android:textStyle="bold"
        android:textSize="40sp"
        android:clickable="true"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>